# gps-anomaly-detection

./: .gitignore  README.md  README_BASELINE.md  README_GBM.md  README_INFORMER.md  TODO.txt  map_track.ipynb  pyproject.toml  requirements.txt  run_preprocess.py  run_train_gbm.py  run_train_informer.py  run_train_lstm.py
config/: gbm.yaml  informer.yaml  train.yaml
src/: anomaly.py  config.py
src/models/: __init__.py  data_module.py  dataset.py  informer_lightning_module.py  informer_model.py  lightning_module.py  lstm_model.py  train.py
src/preprocessing/: __init__.py  map_to_route.py  pipeline.py  segment_stops.py  trass_loader.py  trip_preprocess.py
